crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_vec_contracts.rs
fn supports_vec_contracts(_xs: Vec<i32>) {}

fn main() {}
