crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_recursive_lemma_without_match.rs
/*@
enum List<T> {
    Nil,
    Cons(T, List<T>),
}

fn bad(xs: List<i32>)
  req true
  ens true
{
    bad(xs);
}
*/

fn main() {}
